<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="pref_income_key">income</string>
    <string name="pref_income_title">Monthly income</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_default_desc_today">Today\'s expenses</string>
    <string name="appwidget_default_desc_week">This week\'s expenses</string>
    <string name="appwidget_default_desc_month">This month\'s expenses</string>
    <string name="appwidget_default_text">None</string>
    <string name="up_btn">Back</string>
    <string name="fab_content_desc">ADD</string>
    <string name="edit_categories">Edit categories</string>
    <string name="edit_categories_summary">Add or remove category</string>
    <string name="Category">Select category</string>
    <string name="default_image_from_camera_textview">New image from camera</string>
    <string name="tv_today_desc">Today\'s expenses</string>
    <string name="tv_week_desc">This week</string>
    <string name="tv_month_desc">This month</string>
    <string name="tv_balance_desc">Total balance</string>
    <string name="btn_all_expenses_text">All expenses list</string>
    <string name="category_name_static">Category name</string>
    <string name="et_name_hint">New category name</string>
    <string name="tv_color_static">Category color</string>
    <string name="btn_add_new_category">Add new category</string>
    <string name="default_image_from_gallery_textview">Selected image from gallery</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="take_a_photo_or_select_from_gallery">Take a photo or select from gallery</string>
    <string name="none_selected">None selected</string>
    <string name="image_preview">Image preview</string>
    <string name="add">Add</string>
    <string name="pie_chart">Pie chart</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="bill_photo">Bill photo</string>
    <string name="settings">Settings</string>
    <string name="stay_on_this_screen">Stay on this screen</string>
    <string name="image_text_view_default_text">None selected</string>
    <string name="select_category_button_default_text">SELECT CATEGORY</string>
    <string name="new_expense_added_info">New expense added successfully!</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_expense_confirm_question">Are you sure you want to delete this expense?</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="delete_category">Delete category</string>
    <string name="delete_category_confirm_question">Are you sure you want to delete this category?</string>
    <string name="choose_color">Choose color</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="new_category_created">New category created!</string>
    <string name="no_category_default">None</string>
    <string name="monthly_expenses">Monthly expenses</string>
    <string name="file_not_found_err">ERROR - File not found</string>
    <string name="please_select_decimal_number">Please select a decimal number!</string>
    <string name="groceries_category">Groceries</string>
    <string name="vehicle_category">Vehicle</string>
    <string name="bills_category">Bills</string>
    <string name="medical_category">Medical</string>

</resources>
