<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.NewExpenseActivity"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include  layout="@layout/toolbar_container_with_back_nav" android:id="@+id/toolbar_container_snip" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="@dimen/new_expense_elements_width"
            android:layout_height="@dimen/new_expense_elements_height"
            style="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/toolbar_container_snip"/>

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="@dimen/new_expense_elements_width"
            android:layout_height="@dimen/new_expense_elements_height"
            style="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/description"
            android:inputType="text"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/et_amount"/>

        <Button
            android:id="@+id/btn_select_category"
            android:layout_width="@dimen/new_expense_elements_width_small"
            android:layout_height="@dimen/new_expense_elements_height"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/Category"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/et_desc"/>

        <TextView
            android:id="@+id/tv_photo_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/take_a_photo_or_select_from_gallery"
            android:layout_marginTop="@dimen/photo_info_margin_top"
            android:layout_marginBottom="@dimen/photo_info_margin_bottom"
            app:layout_constraintTop_toBottomOf="@id/btn_select_category"/>

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="@dimen/camera_btn_dim"
            android:layout_height="@dimen/camera_btn_dim"
            android:focusable="true"
            android:contentDescription="@string/camera"
            android:background="@drawable/ic_photo_camera_gray_24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_photo_info"/>

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="@dimen/camera_btn_dim"
            android:layout_height="@dimen/camera_btn_dim"
            android:focusable="true"
            android:contentDescription="@string/gallery"
            android:background="@drawable/ic_photo_gray_24dp"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/tv_photo_info"/>

        <TextView
            android:id="@+id/tv_selected_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/new_expense_elements_height"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/tv_photo_info"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:text="@string/none_selected"/>

        <ImageView
            android:id="@+id/iv_imagepreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:contentDescription="@string/image_preview"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"
            app:layout_constraintBottom_toTopOf="@id/btn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_expense_elements_height_bigger"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Large"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>